Use more Java 17 featues in assembly operators nd other minor fixes
Signed-off-by: Jakub Scholz <www@scholzj.com>